bgeapi used a wrong version from bge